--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
+    <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/876ce4487d.js" crossorigin="anonymous"></script>
-    
+   
   </head>
   <body>
     <div id="app"></div>
+
+      <!-- Bootstrap core JavaScript-->
+      <script src="./src/vendor/jquery/jquery.min.js"></script>
+      <script src="./src/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+  
+      <!-- Core plugin JavaScript-->
+      <script src="./src/vendor/jquery-easing/jquery.easing.js"></script>
+  
+      <!-- Custom scripts for all pages-->
+      <script src="./src/assets/sb-admin-2.js"></script>
+
   </body>
 </html>
