--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="./src/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="./src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./src/assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="./src/assets/js/sb-admin-2.min.js"></script>
   </body>
 </html>
