updated meta data in head tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SAI</title>
+    <meta name="description" content="너와 나의 사이">
+    <meta name="author" content="DevRaphy">
+  </head>
+    <title>너와 나의 사이</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
